--- a/scss_4/_leftside.scss
+++ b/scss_4/_leftside.scss
@@ -319,7 +319,7 @@
                 cursor: pointer;
 
                 &:hover,&:active,&.active {
-                    background: #356bf7;
+                    background: #39547f;
                     color: #ffffff;
                 }
 
