--- a/css_4/style.css
+++ b/css_4/style.css
@@ -142,26 +142,43 @@ header .top .threeCircle button {
   height: 15px;
   border-radius: 30px;
   margin: 5px 8px 0px 0px;
-  border: solid 2px #31a20b;
+  border: solid 2px transparent;
+  background: #31a20b;
+}
+header .top .threeCircle button:hover, header .top .threeCircle button:active, header .top .threeCircle button.active {
+  border-color: #31a20b;
   background: #131313;
 }
+header .top .threeCircle button:last-child {
+  margin-right: 10px;
+}
 header .top .threeCircle button:nth-of-type(2) {
-  background: #ebf1fb;
-  border-color: #9b7c55;
+  background: #505050;
+}
+header .top .threeCircle button:nth-of-type(2):hover, header .top .threeCircle button:nth-of-type(2):active, header .top .threeCircle button:nth-of-type(2).active {
+  border-color: #bcbcbc;
+  background: #505050;
 }
 header .top .threeCircle button:nth-of-type(3) {
   background: #1856bd;
-  border-color: #90c1f2;
+}
+header .top .threeCircle button:nth-of-type(3):hover, header .top .threeCircle button:nth-of-type(3):active, header .top .threeCircle button:nth-of-type(3).active {
+  border-color: #1856bd;
+  background: #ffffff;
 }
 header .top .threeCircle button:nth-of-type(4) {
-  background: #ffffff;
-  border-color: #d31c1c;
-  margin-right: 10px;
+  background: #d31c1c;
+}
+header .top .threeCircle button:nth-of-type(4):hover, header .top .threeCircle button:nth-of-type(4):active, header .top .threeCircle button:nth-of-type(4).active {
+  border-color: #c8dfed;
+  background: #d31c1c;
 }
 header .top .threeCircle button:nth-of-type(5) {
-  background: #de1e30;
-  border-color: #ffffff;
-  margin-right: 10px;
+  background: #ffffff;
+}
+header .top .threeCircle button:nth-of-type(5):hover, header .top .threeCircle button:nth-of-type(5):active, header .top .threeCircle button:nth-of-type(5).active {
+  border-color: #de1e30;
+  background: #ffffff;
 }
 header article {
   width: 100%;
@@ -680,7 +697,7 @@ main .bg {
   cursor: pointer;
 }
 .left ul li .smallList:hover, .left ul li .smallList:active, .left ul li .smallList.active {
-  background: #356bf7;
+  background: #39547f;
   color: #ffffff;
 }
 .left ul li .smallList span {
