--- a/scss_5/_myself.scss
+++ b/scss_5/_myself.scss
@@ -121,7 +121,7 @@
         width: 1150px;
         height: auto;
         margin: 0px 0px 15px 10px;
-        background: #ffffff;
+        background: #dadada;
         padding-top: 20px;
         border-radius: 0px 0px 3px 3px;
         box-sizing: border-box;
@@ -327,7 +327,6 @@
             margin: 0px 20px 20px 0px;
             float: right;
             position: relative;
-            font-weight: bold;
 
             &::before {
                 content: "";
@@ -639,6 +638,7 @@
     z-index: 6;
     left: 280px;
     top: 15px;
+    border-radius: 5px;
 
     //懸浮列假bar
     .fixbar {
@@ -1111,6 +1111,7 @@
         background: #ffffff;
         border-radius: 3px 3px 0px 0px;
         position: relative;
+        text-align: center;
 
         span {
             font-size: 14px;
@@ -1250,6 +1251,7 @@
         background: #ffffff;
         border-radius: 3px 3px 0px 0px;
         position: relative;
+        text-align: center;
 
         span {
             font-size: 14px;
