--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -2,14 +2,14 @@
 .right {
     width: 300px;
     height: 850px;
-    margin-left: 10px;
+    margin: 15px 0px 0px 10px;
     float: left;
     overflow: hidden;
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
-    background: #ffffff;
     margin-top: 15px;
+    background: #ffffff;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -29,9 +29,20 @@
     //上段字樣
     .statusWindow {
         width: 100%;
-        height: 113px;
+        height: 120px;
         background: #ffffff;
         position: relative;
+        margin-bottom: 10px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 10px;
+            bottom: -10px;
+            left: 0px;
+            background: #f0f0f0;
+        }
         
         p {
             background: #ffffff;
@@ -68,7 +79,7 @@
             width: 95%;
             height: auto;
             left: 50%;
-            bottom: 2%;
+            bottom: 5%;
             transform: translateX(-50%);
 
             li {
@@ -141,6 +152,18 @@
         height: auto;
         background: #ffffff;
         text-align: center;
+        margin-bottom: 10px;
+        position: relative;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 10px;
+            background: #f0f0f0;
+            left: 0px;
+            bottom: -10px;
+        }
 
         .title {
             background: #ffffff;
@@ -240,7 +263,7 @@
     .room {
         width: 95%;
         height: auto;
-        margin: 10px auto;
+        margin: 20px auto;
 
         //切換按鈕
         .twobut {
