--- a/scss_5/_type.scss
+++ b/scss_5/_type.scss
@@ -277,8 +277,8 @@
                 }
 
                 &:hover,&:active,&.active {
-                    background: #24349f;
-                    border-color: #24349f;
+                    background: #de1e30;
+                    border-color: #de1e30;
 
                     i {
                         color: #ffffff;
@@ -842,12 +842,13 @@
         background: #ffffff;
         border-radius: 3px 3px 0px 0px;
         position: relative;
+        text-align: center;
 
         span {
-            font-size: 17px;
+            font-size: 14px;
             color: #df1e31;
             line-height: 54px;
-            padding-left: 20px;
+            font-weight: bold;
         }
 
         //上XX
@@ -1001,7 +1002,6 @@
                 color: #308e44;
                 padding-left: 10px;
                 font-size: 12px;
-                font-weight: bold;
             }
         }
 
@@ -1151,6 +1151,7 @@
                 color: #308e44;
                 font-size: 12px;
                 margin-left: 10px;
+                font-weight: normal;
             }
         }
     }
@@ -1234,6 +1235,7 @@
     border-radius: 3px 3px 0px 0px;
     z-index: 16;
     text-align: left;
+    text-align: center;
 
     &.display {
         display: block;
@@ -1242,7 +1244,8 @@
     .barname {
         line-height: 50px;
         color: #df1e31;
-        padding-left: 20px;
+        font-weight: bold;
+        font-size: 14px;
     }
 
     .norcancelbtn {
@@ -1411,6 +1414,7 @@
     top: 150px;
     background: #ffffff;
     border-radius: 3px 3px 0px 0px;
+    text-align: center;
 
     &.display {
         display: block;
@@ -1419,7 +1423,8 @@
     .barname {
         line-height: 50px;
         color: #df1d30;
-        padding-left: 20px;
+        font-size: 14px;
+        font-weight: bold;
     }
 
     .checkCancelBtn {
@@ -2557,12 +2562,13 @@
         background: #ffffff;
         border-radius: 3px 3px 0px 0px;
         position: relative;
+        text-align: center;
 
         span {
-            font-size: 17px;
+            font-size: 14px;
             color: #de1e30;
             line-height: 54px;
-            padding-left: 20px;
+            font-weight: bold;
         }
 
         //上XX
@@ -2610,8 +2616,7 @@
         text-align: center;
 
         p {
-            font-size: 24px;
-            font-weight: bold;
+            font-size: 16px;
             color: #1b1b1b;
             margin-top: 10px;
         }
