--- a/css_5/style.css
+++ b/css_5/style.css
@@ -1252,10 +1252,13 @@ main .bg {
   background: #fff7e4;
 }
 .playBoard tr.onTime td button {
-  background: #ffffff;
+  background: #ece3cb;
 }
 .playBoard tr:hover, .playBoard tr:active, .playBoard tr.active {
-  background: #f3f6fe;
+  background: #d5dcef;
+}
+.playBoard tr:hover td, .playBoard tr:active td, .playBoard tr.active td {
+  color: #000000;
 }
 .playBoard tr:hover td button, .playBoard tr:active td button, .playBoard tr.active td button {
   background: #ffffff;
@@ -1304,15 +1307,13 @@ main .bg {
   color: #8d8d8d;
 }
 .playBoard tr td button {
-  background: #fff8f9;
-  color: #0a9746;
+  color: #f28220;
   border-radius: 3px;
   position: relative;
   word-break: break-all;
   overflow: hidden;
   font-size: 13px;
   margin: 0px 1px;
-  border: solid 1px #e89e9e;
   font-weight: bold;
 }
 .playBoard tr td button:hover, .playBoard tr td button:active, .playBoard tr td button.active {
@@ -1428,7 +1429,7 @@ main .bg {
   margin-right: 10px;
 }
 .playBoard.oldP tr td {
-  padding: 6px 2px;
+  padding: 10px 3px;
 }
 .playBoard.oldP tr td.tLeft {
   text-align: left;
@@ -1437,7 +1438,7 @@ main .bg {
 .playBoard.oldP tr td button {
   width: 100px;
   height: 50px;
-  margin-bottom: 15px;
+  margin-bottom: 8px;
 }
 .playBoard.oldP tr td button:last-child {
   margin: 0px;
@@ -1507,7 +1508,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType1_2 tr td:nth-of-type(4), .playBoard.tType1_2 tr td:nth-of-type(5), .playBoard.tType1_2 tr td:nth-of-type(6), .playBoard.tType1_2 tr td:nth-of-type(7), .playBoard.tType1_2 tr td:nth-of-type(8) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType1_2 tr td:nth-of-type(9) {
   min-width: 55px;
@@ -1593,7 +1594,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType2_2 tr td:nth-of-type(5), .playBoard.tType2_2 tr td:nth-of-type(6), .playBoard.tType2_2 tr td:nth-of-type(7), .playBoard.tType2_2 tr td:nth-of-type(8), .playBoard.tType2_2 tr td:nth-of-type(9) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType2_2 tr td:nth-of-type(10) {
   min-width: 55px;
@@ -1671,7 +1672,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType3_2 tr td:nth-of-type(8), .playBoard.tType3_2 tr td:nth-of-type(9), .playBoard.tType3_2 tr td:nth-of-type(10), .playBoard.tType3_2 tr td:nth-of-type(11), .playBoard.tType3_2 tr td:nth-of-type(12) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType3_2 tr td:nth-of-type(13) {
   min-width: 55px;
@@ -1797,7 +1798,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType5_2 tr td:nth-of-type(10), .playBoard.tType5_2 tr td:nth-of-type(11), .playBoard.tType5_2 tr td:nth-of-type(12), .playBoard.tType5_2 tr td:nth-of-type(13), .playBoard.tType5_2 tr td:nth-of-type(14) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType5_2 tr td:nth-of-type(15) {
   min-width: 55px;
@@ -2022,7 +2023,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType8_2 tr td:nth-of-type(10), .playBoard.tType8_2 tr td:nth-of-type(11), .playBoard.tType8_2 tr td:nth-of-type(12), .playBoard.tType8_2 tr td:nth-of-type(13), .playBoard.tType8_2 tr td:nth-of-type(14) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType8_2 tr td:nth-of-type(15) {
   min-width: 55px;
@@ -2084,7 +2085,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType9_2 tr td:nth-of-type(4), .playBoard.tType9_2 tr td:nth-of-type(5), .playBoard.tType9_2 tr td:nth-of-type(6), .playBoard.tType9_2 tr td:nth-of-type(7), .playBoard.tType9_2 tr td:nth-of-type(8) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType9_2 tr td:nth-of-type(9) {
   min-width: 55px;
@@ -2153,7 +2154,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType10_2 tr td:nth-of-type(11), .playBoard.tType10_2 tr td:nth-of-type(12), .playBoard.tType10_2 tr td:nth-of-type(13), .playBoard.tType10_2 tr td:nth-of-type(14), .playBoard.tType10_2 tr td:nth-of-type(15) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType10_2 tr td:nth-of-type(16) {
   min-width: 55px;
@@ -2273,7 +2274,7 @@ main .bg {
   padding: 0px;
 }
 .playBoard.tType12_2 tr td:nth-of-type(9), .playBoard.tType12_2 tr td:nth-of-type(10), .playBoard.tType12_2 tr td:nth-of-type(11), .playBoard.tType12_2 tr td:nth-of-type(12), .playBoard.tType12_2 tr td:nth-of-type(13) {
-  min-width: 110px;
+  width: 1%;
 }
 .playBoard.tType12_2 tr td:nth-of-type(14) {
   min-width: 55px;
