--- a/scss_5/_header.scss
+++ b/scss_5/_header.scss
@@ -275,14 +275,14 @@ header {
 
             .selectBox {
                 float: right;
-                width: 25%;
+                width: 24%;
                 position: relative;
                 margin-top: 10px;
 
                 .fa-globe {
                     float: left;
-                    margin: 3px 6px 0px 0px;
-                    color: #8d8d8d;
+                    margin: 3px 0px 0px 0px;
+                    color: #393939;
                 }
 
                 //下箭頭
@@ -293,9 +293,9 @@ header {
                     width: 0px;
                     height: 0px;
                     border-style: solid;
-                    border-width: 10px 8px 0px 8px;
-                    border-color: #a4a4a4 transparent;
-                    top: 7px;
+                    border-width: 6px 5px 0px 5px;
+                    border-color: #de1e30 transparent;
+                    top: 8px;
                     right: 10px;
                 }
 
@@ -371,14 +371,14 @@ header {
 
             .selectBox {
                 float: right;
-                width: 21%;
+                width: 20%;
                 position: relative;
                 margin-top: 10px;
 
                 .fa-globe {
                     float: left;
-                    margin: 3px 6px 0px 0px;
-                    color: #8d8d8d;
+                    margin: 3px 3px 0px 0px;
+                    color: #393939;
                 }
 
                 //下箭頭
@@ -389,9 +389,9 @@ header {
                     width: 0px;
                     height: 0px;
                     border-style: solid;
-                    border-width: 10px 8px 0px 8px;
-                    border-color: #a4a4a4 transparent;
-                    top: 7px;
+                    border-width: 6px 5px 0px 5px;
+                    border-color: #de1e30 transparent;
+                    top: 8px;
                     right:10px;
                 }
 
