--- a/scss_5/_table.scss
+++ b/scss_5/_table.scss
@@ -281,7 +281,8 @@
 				&.tbimg3 {
 					width: auto;
 					height: auto;
-					color: #0955f0;
+					color: #0046d4;
+					font-size: 13px;
 				}
 			}
 			
