--- a/scss_2/_leftside.scss
+++ b/scss_2/_leftside.scss
@@ -198,8 +198,17 @@
                 }
 
                 a {
+                    background: #ededed;
                     border-color: transparent;
-                    color: #e45b08;
+                    color: #356bf7;
+
+                    i {
+                        color: #356bf7;
+                    }
+
+                    svg {
+                        fill: #356bf7;
+                    }
 
                     .total {
                         color: #e45b08;
@@ -225,7 +234,7 @@
             a {
                 display: block;
                 color: #1b1b1b;
-                width: 90%;
+                width: 95%;
                 background: #ffffff;
                 height: 45px;
                 line-height: 45px;
@@ -246,6 +255,10 @@
 
                     &::before {
                         margin: 0px auto;
+                    }
+
+                    &.fa-heart {
+                        color: #f8778f;
                     }
 
                     &.fa-hotjar,&.fa-hockey-puck,
@@ -311,6 +324,15 @@
                 color: #454545;
                 cursor: pointer;
                 margin: 0px auto;
+
+                &:nth-of-type(1) {
+                    margin-top: 10px;
+                }
+
+                &:last-child {
+                    margin-bottom: 10px;
+                    border: none;
+                }
 
                 &:hover,&:active,&.active {
                     background: #356bf7;
