--- a/scss_2/_rightside.scss
+++ b/scss_2/_rightside.scss
@@ -8,8 +8,6 @@
     position: relative;
     z-index: 6;
     scrollbar-width: thin;
-    background: #ffffff;
-    box-shadow: 0px 0px 5px 0px #00000049;
 
     &::-webkit-scrollbar {
         width: 5px;
@@ -32,9 +30,11 @@
         height: 113px;
         background: #ffffff;
         position: relative;
-        
+        margin-bottom: 10px;
+        box-shadow: 0px 2px 5px 0px #00000049;
+
         p {
-            background: #f08512;
+            background: #294282;
             color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
@@ -125,9 +125,11 @@
         height: auto;
         background: #ffffff;
         text-align: center;
+        margin-bottom: 10px;
+        box-shadow: 0px 2px 5px 0px #00000049;
 
         .title {
-            background: #f08512;
+            background: #294282;
             color: #ffffff;
             padding: 7px 15px;
             font-size: 12px;
@@ -219,8 +221,8 @@
             button {
                 width: 49.5%;
                 height: 100%;
-                background: #f4f4f4;
-                color: #7b7b7b;
+                background: #294282;
+                color: #ffffff;
                 font-size: 14px;
                 float: left;
                 margin-right: 1%;
@@ -231,8 +233,8 @@
                 }
 
                 &:hover,&:active,&.active {
-                    background: #f08512;
-                    color: #ffffff;
+                    background: #ffffff;
+                    color: #294282;
                 }
             }
         }
@@ -243,7 +245,7 @@
             button {
                 width: 100%;
                 height: 100%;
-                background: #f08512;
+                background: #294282;
                 color: #ffffff;
                 font-size: 14px;
                 border-radius: 3px 3px 0px 0px;
@@ -448,7 +450,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             scrollbar-width: thin;
-            background: #f08512;
+            background: #ffffff;
 
             &::-webkit-scrollbar {
                 width: 5px;
