--- a/scss_2/_table.scss
+++ b/scss_2/_table.scss
@@ -2112,6 +2112,7 @@
     overflow: hidden;
 	margin: 8px auto 0px;
 	border-collapse: inherit;
+	border: solid 1px #dedede;
 
 	&:last-child {
 		margin-bottom: 20px;
@@ -2148,9 +2149,9 @@
 			color: #595959;
 			border-style: solid;
 			border-width: 0px 0px 2px 0px;
-			border-color: #f08512;
+			border-color: #dedede;
 			vertical-align: middle;
-			background: #ffffff;
+			background: #f7f7f7;
 			font-size: 12px;
 
 			&.waiting {
@@ -2177,7 +2178,7 @@
 
 			&:nth-of-type(odd) {
 				border-right-width: 1px;
-				border-right-color: #eef0f6;
+				border-right-color: #dedede;
 			}
 
 			&:last-child {
