--- a/scss_5/_rightside.scss
+++ b/scss_5/_rightside.scss
@@ -432,7 +432,7 @@
                         height: 0px;
                         border-style: solid;
                         border-width: 7px 0px 7px 8px;
-                        border-color: transparent #a4a4a4;
+                        border-color: transparent #de1e30;
                         right: 25px;
                         top: 8px;
                         transition: 0.3s all;
